--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -20,10 +20,12 @@
   %div{ data: { bind: "attr: {id: 'account_' + id }" }}
     %table{ cellspacing: 0, cellpadding: 0}
       %tr
-        %th Amount
+        %th.number_column Amount
+        %th.number_column Balance
       <!-- ko foreach: transaction_items -->
       %tr
         %td.number_column{ data: { bind: "text: formattedPolarizedAmount" }}
+        %td.number_column{ data: { bind: "text: formattedBalance" }}
       <!-- /ko -->
   <!-- /ko -->
 :javascript  
