[#62778956] added support for adding a new account in single page mode

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -222,6 +222,11 @@ table.attributes {
   background-image: url(/assets/add_small.png)
 }
 
+.small_header_add_button {
+  @extend .any_small_button;
+  background-image: url(/assets/add_small_inverted.png)
+}
+
 .save_button {
   @extend .any_form_button;
   background-image: url(/assets/save.png)
