[#62779742] added support for deleting an account

--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -14,7 +14,8 @@
           %span{ data: { bind: "text: name, css: cssClass" }}
         %td.number_column{ data: { bind: "text: formattedBalanceWithChildren,click: display" }}
         %td.action_cell
-          %a.small_edit_button{ data: { bind: "visible: canEdit(), click: edit"}, href: '#', title: 'Click here to edit this account.' } Edit
+          %a.small_edit_button{ data: { bind: "visible: canEdit(), click: edit" }, href: '#', title: 'Click here to edit this account.' } Edit
+          %a.small_delete_button{ data: { bind: "visible: canDestroy(), click: destroy" }, href: '#', title: 'Click here to delete this account.' } Delete
       <!-- /ko -->
 #transactions
   %ul{ data: { bind: "foreach: displayedAccounts" }}
