--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -39,8 +39,8 @@
         %th &nbsp;
       <!-- ko foreach: transaction_items -->
       %tr{ data: { bind: "css: $index() % 2 == 0 ? 'table_row' : 'alt_table_row'" }}
-        %td.number_column{ data: { bind: "text: formattedTransactionDate" }}
-        %td{ data: { bind: "text: description" }}
+        %td.number_column{ data: { bind: "inlineEditor: formattedTransactionDate" }}
+        %td{ data: { bind: "inlineEditor: description" }}
         %td
           %span.ui-icon.account-toggle{ data: { bind: "click: toggleDetails, css: toggleCss" }} &nbsp;
           %span{ data: { bind: "text: otherAccountName" }}
