--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -43,7 +43,7 @@
         %td{ data: { bind: "inlineEditor: description" }}
         %td
           %span.ui-icon.account-toggle{ data: { bind: "click: toggleDetails, css: toggleCss" }} &nbsp;
-          %span{ data: { bind: "inlineListEditor: otherAccountName, listOptions: availableAccounts, listOptionsText: path, listOptionsValue: id" }}
+          %span{ data: { bind: "inlineEditor: otherAccountPath, editorClass: 'account_field', autocompleteLookup: getAccountPaths" }}
         %td.boolean_column{ data: { bind: "text: reconciled() ? 'X' : ''" }}
         %td.number_column{ data: { bind: "inlineEditor: formattedPolarizedAmount, editorClass: 'number_field'" }}
         %td.number_column{ data: { bind: "text: formattedBalance" }}
@@ -93,8 +93,12 @@
       tabs.tabs('refresh');
     });
     app.selectedAccountIndex.subscribe(function(index) {
-      tabs.tabs('option', 'active', index);
+      $('#transactions').tabs('option', 'active', index);
     });
+
+    window.getAccountPaths = function(request, callback) {
+      return app.getAccountPaths(request, callback);
+    };
 
     // Initialize the account form
     app.editAccount.subscribe(function(account) {
@@ -106,6 +110,7 @@
     });
 
     // Initialize JQuery elements
+    // dialogs
     $('.dialog').dialog({ 
       autoOpen: false, 
       modal: true,
