--- a/app/assets/stylesheets/single_page.css.scss
+++ b/app/assets/stylesheets/single_page.css.scss
@@ -122,7 +122,7 @@ span.account_depth_2 {
   display: none;
 }
 
-input.number_field {
+input.number_field, input.date_field {
   text-align: right;
   width: 6em;
 }
