--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -39,7 +39,7 @@
         %th &nbsp;
       <!-- ko foreach: transaction_items -->
       %tr{ data: { bind: "css: $index() % 2 == 0 ? 'table_row' : 'alt_table_row'" }}
-        %td.number_column{ data: { bind: "inlineDateEditor: formattedTransactionDate" }}
+        %td.number_column{ data: { bind: "inlineDateEditor: formattedTransactionDate, editorClass: 'date_field'" }}
         %td{ data: { bind: "inlineEditor: description" }}
         %td
           %span.ui-icon.account-toggle{ data: { bind: "click: toggleDetails, css: toggleCss" }} &nbsp;
@@ -63,6 +63,20 @@
               %td.number_column{ data: { bind: "text: formattedCreditAmount" }}
             <!-- /ko -->
       <!-- /ko -->
+
+      %tr{ data: { bind: "with: newTransactionItem"}}
+        %td.number_column
+          %input.date_field{ type: 'text', placeholder: 'Transaction date', data: { bind: "value: formattedTransactionDate" } }
+        %td
+          %input{ type: 'text', placeholder: 'Description', data: { bind: "value: description" } }
+        %td
+          %input{ type: 'text', placeholder: 'Account', data: { bind: "value: otherAccountPath" } }
+        %td &nbsp;
+        %td
+          %input.number_field{ type: 'text', placeholder: 'Amount', data: { bind: "value: amount" } }
+        %td &nbsp;
+        %td
+          %button.small_save_button{ title: 'Click here to save the new transaction.', data: { bind: "click: save" }} Save
   <!-- /ko -->
 
 <!-- Account Form -->
