[#62778890] added ability to edit an entity through the single page app

--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -6,6 +6,7 @@
   #entity_container
     .actions
       %a.small_add_button{ href: "#", data: { bind: "click: newEntity" }}
+      %a.small_edit_button{ href: "#", data: { bind: "click: editSelectedEntity" }}
     %select{ data: { bind: "options: entities, optionsText: 'name', value: selectedEntity" } }
   #account_container{ data: { bind: "with: selectedEntity()" }}
     %table.list#accounts_table{ cellspacing: 0, cellpadding: 0}
