--- a/app/views/transactions/index.html.haml
+++ b/app/views/transactions/index.html.haml
@@ -11,7 +11,9 @@
       %td.transaction_date_column= transaction.transaction_date.strftime("%-m/%-d/%Y")
       %td.transaction_description_column= link_to(transaction.description, transaction_path(transaction))
       %td.number_column= format_currency(transaction.total_credits.abs)
-      %td= render 'shared/delete_form', resource: transaction, url: transaction_path(transaction)
+      %td.action_cell
+        = link_to 'Attachments', transaction_attachments(transaction), class: attachment_button, title: 'Click here to see the attachments for this transaction.'
+        = render 'shared/delete_form', resource: transaction, url: transaction_path(transaction)
 .new_transaction_container
   =form_for([@account || @entity, @transaction]) do |f|
     =render 'form_fields', f: f, transaction: @transaction, items: @items
