--- a/app/views/transactions/index.html.haml
+++ b/app/views/transactions/index.html.haml
@@ -5,14 +5,14 @@
     %th Transaction Date
     %th Description
     %th Amount
-    %th &nbsp;
+    %th.action_cell &nbsp;
   -@transactions.each_with_index do |transaction, index|
     %tr{class: index % 2 == 0 ? 'table_row' : 'alt_table_row'}
       %td.transaction_date_column= transaction.transaction_date.strftime("%-m/%-d/%Y")
       %td.transaction_description_column= link_to(transaction.description, transaction_path(transaction))
       %td.number_column= format_currency(transaction.total_credits.abs)
       %td.action_cell
-        = link_to 'Attachments', transaction_attachments(transaction), class: attachment_button, title: 'Click here to see the attachments for this transaction.'
+        = link_to 'Attachments', transaction_attachments_path(transaction), class: 'attachments_button', title: 'Click here to see the attachments for this transaction.'
         = render 'shared/delete_form', resource: transaction, url: transaction_path(transaction)
 .new_transaction_container
   =form_for([@account || @entity, @transaction]) do |f|
