--- a/app/views/attachments/index.html.haml
+++ b/app/views/attachments/index.html.haml
@@ -9,6 +9,7 @@
     %tr
       %td= attachment.name
       %td= attachment.content_type
-      %td &nbsp;
+      %td.action_cell
+        =link_to 'View', attachment_content_path(attachment.content), class: 'show_button', title: 'Click here to view the attachment.'
 .actions
   =link_to 'Add', new_transaction_attachment_path(@transaction), class: 'add_button', title: 'Click here to add a new attachment.'
