--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -285,6 +285,11 @@ table.attributes {
   background-image: url(/assets/attachment.png);
 }
 
+.small_attachments_button {
+  @extend .any_small_button;
+  background-image: url(/assets/attachment_small.png);
+}
+
 .standard_button {
   background-color: $white;
   border: 3px solid $dark-grey;
