--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -54,7 +54,7 @@
         %td.number_column{ data: { bind: "text: formattedBalance" }}
         %td.action_cell
           %a.small_delete_button{ href: '#', title: 'Click here to delete this transaction.', data: { bind: "click: destroy" }} Delete
-          %a.small_add_attachment_button{ href: '#', title: 'Click here to add an attachment.', data: { bind: "click: addAttachment, visible: hasNoAttachments" }}
+          %a.small_add_attachment_button{ href: '#', title: 'Click here to add an attachment.', data: { bind: "click: newAttachment, visible: hasNoAttachments" }}
           %a.small_attachments_button{ href: '#', title: 'Click here to view the attachment.', data: { bind: "click: showAttachment, visible: hasAttachment" }}
       %tr{ data: { bind: "if: showDetails" }}
         %td.detail_cell{ colspan: 6, data: { bind: "with: transaction" }} 
