[#64680394] changed attachment view model to manage upload directly, attachment form now uploads the file successfully

--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -143,7 +143,7 @@
     %div
       %label{ for: 'attachment_file' } File
       %br
-      %input#attachment_file{ type: 'file', data: { bind: "value: raw_file" }}
+      %input#attachment_file{ type: 'file', data: { bind: "file: raw_file" }}
 
 :javascript  
   $(function() {
